--- a/src/index.css
+++ b/src/index.css
@@ -6,11 +6,14 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: "Montserrat", sans-serif;
-  background-color: skyblue;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+
+.contact {
+  background-color: skyblue;
 }
 
 /* * {
